+fix vue spinner

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "license": "MIT",
   "dependencies": {
     "date-fns": "^1.28.5",
-    "stats-webpack-plugin": "^0.6.0"
+    "stats-webpack-plugin": "^0.6.0",
+    "vue-simple-spinner": "^1.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
-    "vue-simple-spinner": "^1.2.5",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
